syntax = "proto3";

package dpa;

service Basic {
    rpc Ping(PingRequest) returns(PongResponse) {}
}

message PingRequest { string client_msg = 1; }

message PongResponse {
    string status = 1;
    string client_msg = 2;
    int32 count = 3;
}
