syntax = "proto3";

import "google/protobuf/empty.proto";

package dpa;

service Cluster {
    rpc GetLeader(google.protobuf.Empty) returns(NodeDetails) {}
    rpc GetMembers(google.protobuf.Empty) returns(MemberDetails) {}
}

message NodeDetails { string node_id = 1; }

message MemberDetails {
    string leader = 1;
    repeated NodeDetails members = 2;
}
